# GoogleSearch

./: .gitignore  CMakeLists.txt  GoogleSearch.pro  googleapi.h  main.cpp  main.qml  qml.qrc  trayicon.cpp  trayicon.h  traymenu.qml
google_api_model/: CMakeLists.txt
google_api_model/include/: google_api.h  google_model.h
google_api_model/src/: google_api.cpp  google_model.cpp
google_search/: CMakeLists.txt  googleapi.cpp  res.qrc
google_search/qml/: GoogleResultComponent.qml  TrayMenu.qml  main.qml
google_search/src/: main.cpp
lib/: tray_icon.exp  tray_icon.ilk  tray_icon.lib
qml/: GoogleResultComponent.qml  main.qml
tray_icon/: CMakeLists.txt
tray_icon/include/: trayicon.h
tray_icon/src/: trayicon.cpp
